--- a/constrained-random-walks-notebook.ipynb
+++ b/constrained-random-walks-notebook.ipynb
@@ -36,6 +36,8 @@
    "outputs": [],
    "source": [
     "def walk(effective_jump,n):\n",
+    "    ''' Returns a trajectory of a constrained random walk of size n\n",
+    "    with an given effective_distribution '''\n",
     "    position = 0\n",
     "    trajectory = np.zeros(n+1)\n",
     "    for m in range(n-1):\n",
@@ -60,6 +62,8 @@
    "outputs": [],
    "source": [
     "def effective_jump_ARS(free_jump,acceptance_probability,position,m,n):\n",
+    "    ''' Returns a jump length eta by using the acceptance-rejection\n",
+    "    method to sample the effective distribution '''\n",
     "    p_accept = 0\n",
     "    while np.random.rand() > p_accept:\n",
     "        eta = free_jump()\n",
@@ -91,6 +95,8 @@
    "outputs": [],
    "source": [
     "def effective_jump_lattice(position,m,n):\n",
+    "    ''' Sample the effective distribution for the bridge \n",
+    "    lattice random walk '''\n",
     "    p_right = 1/2*(1-position/(n-m))\n",
     "    if np.random.rand() < p_right:\n",
     "        return +1\n",
@@ -169,6 +175,8 @@
    "outputs": [],
    "source": [
     "def effective_jump(position,m,n):\n",
+    "    ''' Sample the effective distribution for the Gaussian \n",
+    "    lattice random walk '''\n",
     "    mu = -position/(n-m)\n",
     "    sigma = np.sqrt((n-m-1)/(n-m))\n",
     "    return mu + sigma * np.random.randn()"
@@ -236,6 +244,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "''' Sample the effective distribution for the bridge \n",
+    "    Gaussian random walk using acceptance-rejection method '''\n",
     "def free_jump():\n",
     "    return np.random.randn()\n",
     "def acceptance_probability(position,eta,m,n):\n",
@@ -306,6 +316,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "''' Sample the effective distribution for the bridge \n",
+    "    Cauchy random walk using acceptance-rejection method '''\n",
     "def free_jump():\n",
     "    return np.random.standard_cauchy()\n",
     "def acceptance_probability(position,eta,m,n):\n",
@@ -376,10 +388,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def accept_prob_cache(n):\n",
-    "    ''' computes the acceptance probability in advance for various space-time points for a bridge of length n'''\n",
-    "    ''' returns the positions and corresponding acceptance probability'''\n",
+    "''' Because the backward propagator is unknown, \n",
+    "we compute it numerically using fast Fourier transform.\n",
+    "We cache it in memory for better efficiency.'''\n",
     "    \n",
+    "def accept_prob_cache(n):\n",
+    "    ''' Returns the positions and corresponding acceptance probability'''\n",
     "    Lambda = 10 # upper cut-off for the Fourier inversion\n",
     "    num_points = 1000000 # number of points for the Fourier inversion\n",
     "    \n",
@@ -410,6 +424,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "''' Sample the effective distribution for the bridge \n",
+    "    Student random walk using acceptance-rejection method '''\n",
     "def free_jump():\n",
     "    return np.random.standard_t(3)\n",
     "def acceptance_probability(position,eta,m,n):\n",
@@ -489,6 +505,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "''' Sample the effective distribution for the excursion\n",
+    "lattice random walk '''\n",
     "def effective_jump(position,m,n):\n",
     "    p_right = 1/2*(1+(n-m-position*(position+2))/((position+1)*(n-m)))\n",
     "    if np.random.rand() < p_right:\n",
@@ -566,22 +584,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "''' Sample the effective distribution for the meander\n",
+    "lattice random walk. We compute the survival probability by\n",
+    "summing the backward propagator over all possible final positions.'''\n",
     "def Q(x,x0,m):\n",
-    "    return (special.comb(m, (m+x-x0)/2)-special.comb(m, (m+x+2+x0)/2))*2**(-m)\n",
+    "    return (special.comb(m,(m+x-x0)/2)-special.comb(m, (m+x+2+x0)/2))*2**(-m)\n",
     "def surv(x0,m):\n",
     "    s = 0\n",
     "    for x in range(x0+m,max(x0-m,0)-1,-2):\n",
     "        s += Q(x,x0,m)\n",
-    "    return s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "charged-overview",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return s\n",
     "def effective_jump(position,m,n):\n",
     "    pright = surv(position+1,n-m-1)/(2*surv(position,n-m))\n",
     "    if np.random.rand() < pright:\n",
@@ -636,22 +648,6 @@
     "plt.xlabel('steps')\n",
     "plt.ylabel('position')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "appreciated-permission",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "needed-stomach",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
