--- a/constrained-random-walks-notebook.ipynb
+++ b/constrained-random-walks-notebook.ipynb
@@ -95,8 +95,8 @@
    "outputs": [],
    "source": [
     "def effective_jump_lattice(position,m,n):\n",
-    "    ''' Sample the effective distribution for the bridge \n",
-    "    lattice random walk '''\n",
+    "    ''' Sample the effective distribution at time m given its current\n",
+    "    position for the bridge lattice random walk of length n '''\n",
     "    p_right = 1/2*(1-position/(n-m))\n",
     "    if np.random.rand() < p_right:\n",
     "        return +1\n",
@@ -175,8 +175,8 @@
    "outputs": [],
    "source": [
     "def effective_jump(position,m,n):\n",
-    "    ''' Sample the effective distribution for the Gaussian \n",
-    "    lattice random walk '''\n",
+    "    ''' Sample the effective distribution at time m given its current\n",
+    "    position for the bridge Gaussian random walk of length n '''\n",
     "    mu = -position/(n-m)\n",
     "    sigma = np.sqrt((n-m-1)/(n-m))\n",
     "    return mu + sigma * np.random.randn()"
@@ -244,8 +244,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' Sample the effective distribution for the bridge \n",
-    "    Gaussian random walk using acceptance-rejection method '''\n",
+    "''' Sample the effective distribution at time m given its current\n",
+    "    position for the bridge Gaussian random walk of length n using\n",
+    "    acceptance-rejection sampling '''\n",
     "def free_jump():\n",
     "    return np.random.randn()\n",
     "def acceptance_probability(position,eta,m,n):\n",
@@ -316,8 +317,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' Sample the effective distribution for the bridge \n",
-    "    Cauchy random walk using acceptance-rejection method '''\n",
+    "''' Sample the effective distribution at time m given its current\n",
+    "    position for the bridge Cauchy random walk of length n using\n",
+    "    acceptance-rejection sampling '''\n",
     "def free_jump():\n",
     "    return np.random.standard_cauchy()\n",
     "def acceptance_probability(position,eta,m,n):\n",
@@ -388,9 +390,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' Because the backward propagator is unknown, \n",
-    "we compute it numerically using fast Fourier transform.\n",
-    "We cache it in memory for better efficiency.'''\n",
+    "''' We cache the acceptance probabilty in memory for better efficiency\n",
+    "because the backward propagator is unknown so we compute it numerically\n",
+    "using fast Fourier transform.\n",
+    "'''\n",
     "    \n",
     "def accept_prob_cache(n):\n",
     "    ''' Returns the positions and corresponding acceptance probability'''\n",
@@ -424,8 +427,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' Sample the effective distribution for the bridge \n",
-    "    Student random walk using acceptance-rejection method '''\n",
+    "''' Sample the effective distribution at time m given its current\n",
+    "    position for the bridge Student random walk of length n using\n",
+    "    acceptance-rejection sampling '''\n",
     "def free_jump():\n",
     "    return np.random.standard_t(3)\n",
     "def acceptance_probability(position,eta,m,n):\n",
@@ -505,8 +509,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' Sample the effective distribution for the excursion\n",
-    "lattice random walk '''\n",
+    "''' Sample the effective distribution at time m given its current\n",
+    "    position for the excursion lattice random walk of length n. '''\n",
     "def effective_jump(position,m,n):\n",
     "    p_right = 1/2*(1+(n-m-position*(position+2))/((position+1)*(n-m)))\n",
     "    if np.random.rand() < p_right:\n",
@@ -584,9 +588,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' Sample the effective distribution for the meander\n",
-    "lattice random walk. We compute the survival probability by\n",
-    "summing the backward propagator over all possible final positions.'''\n",
+    "''' Sample the effective distribution at time m given its current\n",
+    "    position for the meander lattice random walk of length n.\n",
+    "    We compute the survival probability by summing the backward \n",
+    "    propagator over all possible final positions.'''\n",
     "def Q(x,x0,m):\n",
     "    return (special.comb(m,(m+x-x0)/2)-special.comb(m, (m+x+2+x0)/2))*2**(-m)\n",
     "def surv(x0,m):\n",
